--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Kapcsold le a lámpákat!</h1>
+    <h1>Turn off the lamps!</h1>
     <div id="keret">
         <div class="lampa" id="0"></div>
         <div class="lampa" id="1"></div>
@@ -19,7 +19,7 @@
         <div class="lampa" id="5"></div>
         <div class="lampa" id="6"></div>
     </div>
-    <h2>Legjobb eredmények:</h2>
+    <h2>High scores:</h2>
     <div id="eredmenyek"></div>
     
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
